--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -1,4 +1,8 @@
 //the global import file
 
-@import 'style_imports/colors';
+//modules
 @import '../node_modules/foundation-sites/scss/foundation';
+
+//own stuff
+@import 'style_imports/colors';
+@import 'style_imports/breakpoints';
