--- a/src/app/pages/homepage/style.scss
+++ b/src/app/pages/homepage/style.scss
@@ -1,11 +1,7 @@
-.part1{
-    h2 {
-        color:green;
-    }
-}
 
-.part2{
-    h2 {
-        color:blue;
-    }
+.shaping{
+  
+      background: url("/assets/station-547641.jpg") top right no-repeat;
+      width: 100%;
+      height: 500px;
 }
