--- a/src/app/pages/homepage/template.pug
+++ b/src/app/pages/homepage/template.pug
@@ -1,8 +1,20 @@
-
-h1 homepage
-
-.part1
-    h2 this is the first part
-    
-.part2
-    h2 this is the second part
+.shaping  
+   
+    .red
+        p 1 
+        button
+    .white 
+        p 2
+        .nav
+        img(src="assets/Logo_ECE_transparent.png")
+        img(src="assets/Bulb Icon.png")
+    .blue
+        p 3
+        button 
+.erasmus 
+.innovation 
+.partners
+.love
+.follow
+    .social 
+    .contact 
