--- a/src/app/pages/ic/template.pug
+++ b/src/app/pages/ic/template.pug
@@ -1,1 +1,23 @@
-h1 ic
+.marketing-site-hero
+    .marketing-site-hero-content
+        h1 Lopem impsum this should be a nice tagline
+        |     
+        h2.subheader
+          | And here some text
+        button SIGN UP
+        |
+        h4 Build your idea | Showcase your project
+
+        
+.panel-above
+
+.panel-middle
+
+.panel-below
+
+    
+
+
+
+
+
