--- a/src/style_imports/_breakpoints.scss
+++ b/src/style_imports/_breakpoints.scss
@@ -1,14 +1,4 @@
 @import '../../node_modules/breakpoint-sass/stylesheets/breakpoint';
-
-$breakpoints: ( 
-    small: 0,
-    medium: 640px,
-    large: 1024px,
-    xlarge: 1200px,
-    xxlarge: 1440px,
-);
-
-
 @mixin bp($breakpoint) {
     @if map-has-key($breakpoints, $breakpoint) {
         @include breakpoint(#{map-get($breakpoints, $breakpoint)}) {
@@ -17,6 +7,7 @@ $breakpoints: (
     }
 
     @else {
-        @warn "Unfortunately, no value could be retrieved from `#{$breakpoint}`. "+"Please make sure it is defined in `$breakpoints` map.";
+        @error "Unfortunately, no value could be retrieved from `#{$breakpoint}`. "+"Please make sure it is defined in `$breakpoints` map.";
     }
 }
+
