--- a/src/app/parts/footer/template.pug
+++ b/src/app/parts/footer/template.pug
@@ -1,1 +1,27 @@
-h4 this is the footer
+.banner
+    .text
+        .title 
+            | We would 
+            span love 
+            | to meet you!
+        
+        div Maybe you have a question about what we do.
+            br 
+            | Or you have a super crazy idea to share.
+            
+        div Just drop by our office. 
+        
+        div We have coffee. 
+    .dates 
+        .days Monday 
+            span | 
+            | Tuesday 
+            span | 
+            | Wednesday
+            
+        .time 10.00 to 17.00
+        .room H7-29
+
+.bottom
+    .social social
+    .contact contact
