--- a/src/app/parts/footer/template.pug
+++ b/src/app/parts/footer/template.pug
@@ -23,5 +23,26 @@
         .room H7-29
 
 .bottom
-    .social social
-    .contact contact
+    .social
+        .follow Follow us!
+        ul
+            li
+                .fb
+                .count 3556
+            li
+                .ln
+                .count 348 
+            li
+                .twit
+                .count 456 
+            li
+                .insta
+                .count 502 
+    
+    .contact 
+        .location Burgemeester Oudlaan 50
+            br 
+            | 3062 PA | Rotterdam
+            
+        .phone +31 010 - 409 13 04
+        .mail info@ecestudents.com
