--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -11,12 +11,12 @@
 
 //settings
 $modularscale: ( 
-  base: 1rem,
+  base: 1rem, 
   ratio: $golden
 ); 
 
 $breakpoints: (  
-    small: 0,
+    small: 480px,
     medium: 640px,
     large: 1024px,
     xlarge: 1200px,
