--- a/src/app/parts/footer/template.pug
+++ b/src/app/parts/footer/template.pug
@@ -27,22 +27,25 @@
         .follow Follow us!
         ul
             li
-                .fb
+                a(class="fb", target="_blank", href='https://www.facebook.com/ECEStudents')
                 .count 3556
             li
-                .ln
+                a(class="ln", target="_blank", href='https://www.linkedin.com/company/4997540/')
                 .count 348 
             li
-                .twit
+                a(class="twit", target="_blank", href='https://twitter.com/ECEStudents')
                 .count 456 
             li
-                .insta
+                a(class="insta", target="_blank", href='https://www.instagram.com/ecestudents/')
                 .count 502 
     
     .contact 
-        .location Burgemeester Oudlaan 50
+        .location.fa
+        div Burgemeester Oudlaan 50
             br 
             | 3062 PA | Rotterdam
             
-        .phone +31 010 - 409 13 04
-        .mail info@ecestudents.com
+        .phone.fa
+        div +31 010 - 409 13 04
+        .mail.fa
+        div info@ecestudents.com
