--- a/src/app/pages/ic/template.pug
+++ b/src/app/pages/ic/template.pug
@@ -1,3 +1,6 @@
+//put the menu somewhere in the page
+app-main-menu
+
 .marketing-site-hero
     .marketing-site-hero-content
         h1 Lopem impsum this should be a nice tagline
