--- a/src/main.scss
+++ b/src/main.scss
@@ -17,3 +17,16 @@ body {
     font-size: ms(0);
     color:$ece-black;
 }
+
+::selection {
+  background: $ece-orange; /* WebKit/Blink Browsers */
+  color:white;
+}
+::-moz-selection {
+  background: $ece-orange; /* Gecko Browsers */
+  color:white;
+}
+
+::visited {
+            color: inherit;
+        }
