--- a/src/app/pages/homepage/style.scss
+++ b/src/app/pages/homepage/style.scss
@@ -1,5 +1,50 @@
+@import 'mixins';
+
 .shaping {
-      background: url("/assets/station-547641.jpg") top right no-repeat;
+      background: cd("pages/front/station.jpg", "c_crop,h_1800,w_4000/c_scale,w_1920") top right no-repeat;
       width: 100%;
-      height: 500px;
+      height: 750px;
+      
+      display: grid;
+      grid-template-areas: "left text right";
+      grid-template-columns: 1fr auto 1fr;
+      
+      .red{
+            grid-area: left;
+            text-align: center;
+            background: transparentize($ece-orange, 0.5);
+      }
+      
+      .white {
+        grid-area: text;
+        display: grid;
+        grid-template-rows: repeat(4, auto);
+        grid-auto-flow: row;
+        justify-items: center;
+        
+        h1{
+              color: white;
+              font-weight: normal;
+              font-size: ms(2);
+            margin: 0.67em ms(2) 0 ms(2);
+        }
+      }
+      
+      .blue{
+            grid-area: right;
+            text-align: center;
+            background: transparentize($ece-blue, 0.5);
+      }
+
+      button {
+            @include button @include button-hollow border-color: #fefefe;
+      }
+      
+      .nav{
+            @include menu-base;
+            margin: 0 ms(5);
+            ul{
+                  padding: 0 10px;
+            }
+      }
 }
