--- a/src/app/pages/homepage/style.scss
+++ b/src/app/pages/homepage/style.scss
@@ -27,6 +27,7 @@
               font-weight: normal;
               font-size: ms(2);
             margin: 0.67em ms(2) 0 ms(2);
+            font: Aleo;
         }
       }
       
