--- a/src/main.scss
+++ b/src/main.scss
@@ -13,6 +13,79 @@ $fa-sass-asset-helper: false;
 //global foundation styles
 @include foundation-global-styles;
 
+//fonts
+@font-face{
+  font-family: Aleo;
+  src: url(assets/fonts/aleo/aleo-regular.otf);
+}
+@font-face{
+  font-family: Aleo;
+  src: url(assets/fonts/aleo/aleo-bold.otf);
+  font-weight: bold;
+}
+@font-face{
+  font-family: Aleo;
+  src: url(assets/fonts/aleo/aleo-italic.otf);
+  font-style: italic;
+}
+@font-face{
+  font-family: Aleo;
+  src: url(assets/fonts/aleo/aleo-lightitalic.otf);
+  font-weight: 200;
+  font-style: italic;
+}
+@font-face{
+  font-family: Aleo;
+  src: url(assets/fonts/aleo/aleo-light.otf);
+  font-weight: 200;
+  font-style: italic;
+}
+@font-face{
+  font-family: MuseoSans;
+  src: url(assets/fonts/museosans/museosans_100.otf);
+  font-weight: 100;
+}
+@font-face{
+  font-family: MuseoSans;
+  src: url(assets/fonts/museosans/museosans_100_italic.otf);
+  font-weight: 100;
+  font-style: italic;
+}
+@font-face{
+  font-family: MuseoSans;
+  src: url(assets/fonts/museosans/museosans_300.otf);
+  font-weight: 300;
+}
+@font-face{
+  font-family: MuseoSans;
+  src: url(assets/fonts/museosans/museosans_300_italic.otf);
+  font-weight: 300;
+  font-style: italic;
+}
+@font-face{
+  font-family: MuseoSans;
+  src: url(assets/fonts/museosans/museosans_500.otf);
+  font-weight: 500;
+}
+@font-face{
+  font-family: MuseoSans;
+  src: url(assets/fonts/museosans/museosans_500_italic.otf);
+  font-weight: 500;
+  font-style: italic;
+}
+@font-face{
+  font-family: MuseoSans;
+  src: url(assets/fonts/museosans/museosans_700.otf);
+  font-weight: 100;
+}
+@font-face{
+  font-family: MuseoSans;
+  src: url(assets/fonts/museosans/museosans_700_italic.otf);
+  font-weight: 100;
+  font-style: italic;
+}
+
+
 body {
     font-size: ms(0);
     color:$ece-black;
