--- a/src/app/pages/homepage/template.pug
+++ b/src/app/pages/homepage/template.pug
@@ -9,13 +9,13 @@
     .white 
         li.nav
             ul 
-                a(href='#') About
+                a(routerLink='#') About
             ul 
-                a(href='#') Events
+                a(routerLink='#') Events
             ul 
-                a(href='#') Commitees
+                a(routerLink='#') Commitees
             ul 
-                a(href='#') Career {{ url }}
+                a(routerLink='#') Career {{ url }}
         img(src='{{ logo | cd:"w_350,c_fill" }}')
         h1 Shaping Ideas
         img(src='{{ bulb | cd:"w_200,c_fill" }}')
