--- a/src/app/pages/homepage/template.pug
+++ b/src/app/pages/homepage/template.pug
@@ -15,7 +15,7 @@
             ul 
                 a(routerLink='#') Commitees
             ul 
-                a(routerLink='#') Career {{ url }}
+                a(routerLink='#') Career
         img(src='{{ logo | cd:"w_350,c_fill" }}')
         h1 Shaping Ideas
         img(src='{{ bulb | cd:"w_200,c_fill" }}')
