Trying to work with pug

--- a/src/app/pages/homepage/template.pug
+++ b/src/app/pages/homepage/template.pug
@@ -4,7 +4,7 @@
 .shaping  
    
     .red
-        p 1 
+      
         button For You
     .white 
         li.nav
@@ -20,12 +20,12 @@
         h1 Shaping Ideas
         img(src='{{ bulb | cd:"w_200,c_fill" }}')
     .blue
-        p 3
+        p 
         button Events
-.erasmus 
-.innovation 
-.partners
-.love
-.follow
+#erasmus.container-fluid
+#innovation.container-fluid 
+#partners.container-fluid
+#love.container-fluid 
+#follow.container-fluid
     .social 
     .contact
