--- a/src/app/pages/homepage/style.scss
+++ b/src/app/pages/homepage/style.scss
@@ -48,4 +48,9 @@
                   padding: 0 10px;
             }
       }
+      
+      .container-fluid{
+           height:300px;
+           width:100%;
+      }
 }
