--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -28,6 +28,11 @@ $breakpoints: (
 $ece-orange: #e55625;
 $ece-blue: #4887c7;
 $ece-black: #303030;
+$ic-blue: #4660fd;
+
+$shaping-height: 775px;
+$triangle-height: 200px;
+$shaping-box-height: $shaping-height - $triangle-height;
 
 /*EXAMPLES
 
