--- a/src/app/pages/homepage/template.pug
+++ b/src/app/pages/homepage/template.pug
@@ -1,21 +1,12 @@
 //put the menu somewhere in the page
 //app-main-menu
-
 .shaping  
    
     .red
       
         button For You
     .white 
-        li.nav
-            ul 
-                a(routerLink='#') About
-            ul 
-                a(routerLink='#') Events
-            ul 
-                a(routerLink='#') Commitees
-            ul 
-                a(routerLink='#') Career
+        app-main-menu
         img(src='{{ logo | cd:"w_350,c_fill" }}')
         h1 Shaping Ideas
         img(src='{{ bulb | cd:"w_200,c_fill" }}')
@@ -23,8 +14,28 @@
         p 
         button Events
 #erasmus.container-fluid
+    .left
+        h1 
+            | ERASMUS
+            br
+            | CENTRE FOR 
+            br
+            | ENTREPRENEURSHIP
+        h2 Students
+    .right
+        h3 Who are we?
+        p ECE students is a group of international students that focuses on building an entrepeneurial spirit at Erasmus University Rotterdam. We organize events and competitions aimed to inspire, coach and help students in making their ideas a reality.
+        p We provide all the resources — coaching, network, working space — to help anyone bring their ideas into the real world. Do you feel ready? Because we are. 
 #innovation.container-fluid 
+    .left
+        img(src='{{ ic_logo | cd:"w_350,c_fill"}}')
+    .right
+        h1 Innovation Challenge
+        h2 It's about sustainability this time
+        button Apply now
 #partners.container-fluid
+    h1 Our Partners
+    img(src='{{ partners | cd:"w_1920,c_fill"}}')
 #love.container-fluid 
 #follow.container-fluid
     .social 
