--- a/src/app/pages/ic/template.pug
+++ b/src/app/pages/ic/template.pug
@@ -3,19 +3,33 @@ app-main-menu
 
 .marketing-site-hero
     .marketing-site-hero-content
-        h1 Lopem impsum this should be a nice tagline
+        h1 Unwrap your ideas. Sustainably.
         |     
-        h2.subheader
-          | And here some text
-        button SIGN UP
+        h1.subheader
+          | ECE Innovation Challenge
+        h3.bold 1 December 2017
+        h3 ECE Campus, Marconistraat 16
+        a(target="_blank", href='https://ecestudents2017.typeform.com/to/nCDAKk') Sign Up
         |
         h4 Build your idea | Showcase your project
 
         
-.panel-above
-
-.panel-middle
-
+.panel-about
+    .left
+        img(src='{{ ic_logo | cd:"w_350,c_fill"}}')
+    .right
+        h3 Ships, ports, innovate, what?
+        p The Innovation Challenge is a two-way opportunity for creative-minded students and business organizations. The students, guided by experienced mentors, are able to liberate their imagination and solve business-related problems, while the companies benefit from the ideas of fresh-minded students. During the challenge, the participants will investigate a real-life case, form teams, brainstorm solutions and pitch their ideas to the judges. The best idea wins the award!
+        span.blue December 1 | 8.30
+        span.blue Marconistraat 16
+        span.blue ECE Campus
+.panel-svm
+    .title Stichting Verpakking en Mileu
+    .left 
+        img(src='{{ svm_logo | cd:"w_350,c_fill"}}')
+    .right
+        p The aim of Stichting Verpakking en Milieu (SVM) is to create a sustainable community by offering environmentally friendly product packaging methods. The SVM has been contributing to the environmental protection on a global scale since 1971, when the founders of the company first published the report “Limits to Growth”. Thereupon, SVM has been representing its own packaging chains with reuse-recycle objectives for the public and private sectors and in collaboration with the customers. Nowadays, the company manages the funds remained from the contributions of more than 200 associated organizations.
+        p During the Innovation Challenge, students will study the importance of minimizing the harmful impact of the manufacturing industry on the environment and will have the opportunity to generate their own ideas of creating sustainable packaging, thus contributing to socio-ecological betterment.
 .panel-below
 
      
