--- a/src/app/parts/main_menu/style.scss
+++ b/src/app/parts/main_menu/style.scss
@@ -2,8 +2,23 @@
 
 ul {
     @include menu_base;
-
+    
+    padding: 0 ms(3);
+    
     a {
         color: $ece-black;
+        font-family: MuseoSans;
+        font-weight: 200;
+        font-size: ms(.6);
+    }
+    
+    &:before{
+        content:'';
+        margin: $nav-icon-margin 0;
+        height:  $nav-icon-height;
+        width: $nav-icon-height;
+        background: cd("parts/menu/bulb_icon.png", "h_80,c_fill");
+        background-size: contain;
+        background-repeat: no-repeat;
     }
 }
