--- a/src/app/pages/homepage/template.pug
+++ b/src/app/pages/homepage/template.pug
@@ -32,7 +32,7 @@
     .right
         h1 Innovation Challenge
         h2 It's about sustainability this time
-        button Apply now
+        a(routerLink='/ic') Apply now
 #partners.container-fluid
     h1 Our Partners
     img(src='{{ partners | cd:"w_1920,c_fill"}}')
