--- a/src/app/pages/homepage/style.scss
+++ b/src/app/pages/homepage/style.scss
@@ -1,21 +1,23 @@
 @import 'mixins';
 
-      :host /deep/ .nav {
-            &:before{
-                  content: none;
-            }
-            li {
-                  padding: 0 10px;
-                  a{
-                        font-size: ms(0);
-                        color: $ece-black;
-                        
-                        &:hover{
-                              color: lighten($ece-black, 20);
-                        }
+:host /deep/ .nav {
+      &:before {
+            content: none;
+      }
+      li {
+            padding: 0 10px;
+            a {
+                  font-size: ms(1) !important;
+                  color: white !important;
+                  font-weight: 500 !important;
+                  transition: all 0.3s ease;
+
+                  &:hover {
+                        color: lighten($ece-black, 20)!important;
                   }
             }
       }
+}
 
 .shaping {
       background: cd("pages/front/station.jpg", "c_crop,h_1800,w_4000/c_scale,w_1920") top right no-repeat;
@@ -24,14 +26,19 @@
       font-family: MuseoSans;
       display: grid;
       grid-template-areas: "left text right";
-      grid-template-columns: 1fr auto 1fr;
+      grid-template-columns: 0 100% 0;
 
       .red {
             grid-area: left;
+            display: none;
             height: $shaping-box-height;
             position: relative;
             text-align: center;
             background: transparentize($ece-orange, 0.5);
+
+            a:hover {
+                  color: $ece-blue;
+            }
 
             &:after {
                   content: '';
@@ -53,19 +60,61 @@
 
             h1 {
                   color: white;
-                  font-weight: 200;
-                  font-size: ms(3);
-                  margin: ms(-2) ms(4) 0 ms(4);
+                  font-weight: 300;
+                  font-size: ms(2);
+                  margin: ms(-4) ms(1) 0 ms(1);
             }
       }
 
       .blue {
             grid-area: right;
+            display: none;
             height: $shaping-box-height;
             position: relative;
             text-align: center;
             background: transparentize($ece-blue, 0.5);
-            
+
+            a:hover {
+                  color: $ece-orange;
+
+                  &+.icpop {
+                        opacity: 1;
+                        webkit-transform: scale(1);
+                        -ms-transform: scale(1);
+                        transform: scale(1);
+
+                  }
+            }
+
+            .icpop {
+                  position: relative;
+                  opacity: 0;
+                  margin: -280px auto;
+                  width: 150px;
+                  height: auto;
+                  padding: ms(1);
+                  background: transparentize(white, .2);
+                  transition: all 0.3s ease;
+                  -webkit-transform: scale(0.8);
+                  -ms-transform: scale(0.8);
+                  transform: scale(0.8);
+
+
+                  &:after {
+                        content: '';
+                        position: absolute;
+                        bottom: 0;
+                        left: 50%;
+                        width: 0;
+                        height: 0;
+                        border: 20px solid transparent;
+                        border-top-color: transparentize(white, .2);
+                        border-bottom: 0;
+                        margin-left: -20px;
+                        margin-bottom: -20px;
+                  }
+            }
+
             &:after {
                   content: '';
                   position: absolute;
@@ -77,74 +126,89 @@
             }
       }
 
-      button {
+      a {
             @include button @include button-hollow border-color: #fefefe;
             font-size: ms(2);
             font-weight: 200;
             padding: ms(0) ms(2);
-            margin-top: 500px;
+            margin-top: 475px;
+            text-decoration: none;
       }
-      
+
       .container-fluid {
             height: 300px;
             width: 100%;
-            float:left;
+            float: left;
+      }
+
+      @include bp(medium) {
+            grid-template-columns: 1fr auto 1fr;
+            .white {
+                  h1 {
+                        margin: ms(-2) ms(4) 0 ms(4);
+                        font-size: ms(3);
+                  }
+            }
+            .red,
+            .blue {
+                  display: block;
+            }
       }
 }
 
-#erasmus{
+#erasmus {
       width: 100%;
-      display:grid;
+      display: grid;
       margin: ms(3) 0;
       align-items: center;
-      grid-template-areas: ". left . right .";
-      grid-template-columns: ms(5) 1fr ms(4) 1fr ms(5);
-      
-      h1{
+      grid-template-areas: "left" "right";
+      grid-template-rows: auto auto;
+
+      h1 {
             font-family: MuseoSans;
             color: $ece-blue;
-            font-size: ms(2.5);
+            font-size: ms(1.5);
             margin-bottom: 0;
             margin-top: ms(1);
       }
-      h2{
+      h2 {
             font-family: Aleo;
             color: $ece-orange;
-            font-size: ms(3);
+            font-size: ms(2);
             margin: 0;
       }
-      h3{
+      h3 {
             font-family: MuseoSans;
             color: $ece-orange;
-            font-size: ms(1);
+            font-size: ms(.5);
             font-weight: 300;
             margin-top: ms(1);
       }
       p {
             font-family: Aleo;
             color: $ece-black;
-            font-size: ms(1);
+            font-size: ms(.5);
             font-weight: 300;
       }
-      .left{
+      .left {
             grid-area: left;
       }
-      
-      .right{
+
+      .right {
             grid-area: right;
       }
 }
 
-#innovation{
+#innovation {
       background: cd("pages/front/pexels.jpg", "c_scale,w_1920") 50% 40% no-repeat;
       width: 100%;
-      display:grid;
+      display: grid;
       padding: ms(4) 0;
       align-items: center;
       grid-template-areas: ". left . right .";
       grid-template-columns: ms(5) 1fr ms(4) 2fr ms(5);
-      
-      h1{
+
+      h1 {
             font-family: MuseoSans;
             line-height: 3.33019073rem;
             color: $ic-blue;
@@ -152,14 +216,14 @@
             margin-bottom: 0;
             font-weight: 800;
       }
-      h2{
+      h2 {
             font-family: MuseoSans;
             color: $ece-black;
             font-size: ms(2.5);
             margin: 0;
             font-weight: 200;
       }
-      a{
+      a {
             @include button @include button-hollow border: 4px solid $ece-black;
             color: $ece-black;
             font-size: ms(2);
@@ -167,24 +231,43 @@
             margin: ms(1);
             padding: ms(0) ms(2);
             text-decoration: none;
-            
-            &:hover{
+
+            &:hover {
                   color: $ic-blue;
             }
       }
-      .left{
+      .left {
             grid-area: left;
       }
-      
-      .right{
+
+      .right {
             grid-area: right;
             text-align: center;
-      }   
+      }
 }
 
-#partners{
-      width:100%;
-      margin: ms(3) ms(2);
+#commingsoon{
+      width: 100%;
+      text-align: center;
+            h1 {
+            font-family: MuseoSans;
+            color: $ece-blue;
+            font-size: ms(2.5);
+            margin-bottom: 0;
+            margin-top: ms(1);
+      }
+      h2 {
+            font-family: MuseoSans;
+            color: $ece-black;
+            font-size: ms(2);
+            margin: 0;
+            font-weight: 200;
+      }
+}
+
+#partners {
+      width: 100%;
+      margin: ms(2) 0;
       h1 {
             color: $ece-orange;
             font-family: MuseoSans;
@@ -192,5 +275,29 @@
       }
 }
 
+@include bp(medium) {
+      #erasmus {
+            grid-template-areas: ". left . right .";
+            grid-template-columns: ms(5) 1fr ms(4) 1fr ms(5);
+            h1 {
+                  font-size: ms(2.5);
+            }
+            h2 {
 
-      
+                  font-size: ms(3);
+            }
+            h3 {
+                  font-size: ms(1);
+                  margin-top: ms(1);
+            }
+            p {
+                  font-size: ms(1);
+            }
+      }
+
+      #partners {
+            margin: ms(3) 0;
+            padding: 0 ms(2);
+      }
+
+}
