--- a/src/app/pages/homepage/style.scss
+++ b/src/app/pages/homepage/style.scss
@@ -1,32 +1,95 @@
 @import 'mixins';
 
+#construction{
+      width: 100%;
+      text-align: center;
+      font-family: MuseoSans;
+      font-size: ms(0);
+      color: white;
+      font-weight: 500;
+      text-align: center;
+      background: $ece-blue;
+      position: fixed;
+      top: 0;
+      z-index: 2;
+}
+
 :host /deep/ .nav {
-      &:before {
-            content: none;
+      li:first-of-type,
+      li:nth-of-type(2):before {
+            display: none;
       }
+      li+li:before {
+            line-height: 47px !important;
+      }
+
       li {
-            padding: 0 10px;
+            padding: 0;
             a {
                   font-size: ms(1) !important;
-                  color: white !important;
-                  font-weight: 500 !important;
+                  padding: ms(-1) ms(1) !important;
                   transition: all 0.3s ease;
-
-                  &:hover {
-                        color: lighten($ece-black, 20)!important;
-                  }
             }
       }
 }
 
 .shaping {
-      background: cd("pages/front/station.jpg", "c_crop,h_1800,w_4000/c_scale,w_1920") top right no-repeat;
+      margin-top: 24px;
+      background: cd("pages/front/station.jpg", "c_crop,h_2000,w_4000/c_scale,w_1920") top right no-repeat;
       width: 100%;
       height: $shaping-height;
+      min-height: 750px;
       font-family: MuseoSans;
       display: grid;
       grid-template-areas: "left text right";
       grid-template-columns: 0 100% 0;
+
+      .red,
+      .blue {
+            a:hover,
+            button:hover {
+                  position: relative;
+                  color: $ece-orange;
+
+                  & .icpop {
+                        display: block;
+                  }
+            }
+
+            .icpop {
+                  position: absolute;
+                  bottom: 80px;
+                  left: 0;
+                  display: none;
+                  width: 100%;
+                  height: auto;
+                  padding: ms(1);
+                  background: transparentize(white, .2);
+                  ;
+                  font-size: ms(0);
+                  font-weight: 500;
+                  color: $ece-black;
+                  div,
+                  img {
+                        margin-bottom: ms(-1);
+                  }
+
+
+                  &:after {
+                        content: '';
+                        position: absolute;
+                        bottom: 0;
+                        left: 50%;
+                        width: 0;
+                        height: 0;
+                        border: 20px solid transparent;
+                        border-top-color: transparentize(white, .2);
+                        border-bottom: 0;
+                        margin-left: -20px;
+                        margin-bottom: -20px;
+                  }
+            }
+      }
 
       .red {
             grid-area: left;
@@ -36,7 +99,8 @@
             text-align: center;
             background: transparentize($ece-orange, 0.5);
 
-            a:hover {
+            a:hover,
+            button:hover {
                   color: $ece-blue;
             }
 
@@ -48,6 +112,24 @@
                   width: 100%;
                   border-top: $triangle-height solid transparentize($ece-orange, 0.5);
                   border-right: $triangle-height solid transparent;
+            }
+            
+            .icpop{
+                  padding:0;
+                  div{
+                        padding: ms(0);
+                        margin: 0;
+                        font-size: ms(0);
+                        border-bottom: 1px solid $ece-orange;
+                        
+                        &:last-of-type{
+                              border: 0px;
+                        }
+                        
+                        &:hover{
+                              background-color: transparentize($ece-orange, 0.5);
+                        }
+                  }
             }
       }
 
@@ -74,46 +156,6 @@
             text-align: center;
             background: transparentize($ece-blue, 0.5);
 
-            a:hover {
-                  color: $ece-orange;
-
-                  &+.icpop {
-                        opacity: 1;
-                        webkit-transform: scale(1);
-                        -ms-transform: scale(1);
-                        transform: scale(1);
-
-                  }
-            }
-
-            .icpop {
-                  position: relative;
-                  opacity: 0;
-                  margin: -280px auto;
-                  width: 150px;
-                  height: auto;
-                  padding: ms(1);
-                  background: transparentize(white, .2);
-                  transition: all 0.3s ease;
-                  -webkit-transform: scale(0.8);
-                  -ms-transform: scale(0.8);
-                  transform: scale(0.8);
-
-
-                  &:after {
-                        content: '';
-                        position: absolute;
-                        bottom: 0;
-                        left: 50%;
-                        width: 0;
-                        height: 0;
-                        border: 20px solid transparent;
-                        border-top-color: transparentize(white, .2);
-                        border-bottom: 0;
-                        margin-left: -20px;
-                        margin-bottom: -20px;
-                  }
-            }
 
             &:after {
                   content: '';
@@ -126,10 +168,11 @@
             }
       }
 
-      a {
+      a,
+      button {
             @include button @include button-hollow border-color: #fefefe;
             font-size: ms(2);
-            font-weight: 200;
+            font-weight: 300;
             padding: ms(0) ms(2);
             margin-top: 475px;
             text-decoration: none;
@@ -140,6 +183,7 @@
             width: 100%;
             float: left;
       }
+
 
       @include bp(medium) {
             grid-template-columns: 1fr auto 1fr;
@@ -246,10 +290,10 @@
       }
 }
 
-#commingsoon{
+#commingsoon {
       width: 100%;
       text-align: center;
-            h1 {
+      h1 {
             font-family: MuseoSans;
             color: $ece-blue;
             font-size: ms(2.5);
