--- a/src/app/pages/ic/template.pug
+++ b/src/app/pages/ic/template.pug
@@ -3,11 +3,13 @@ app-main-menu
 
 .marketing-site-hero
     .marketing-site-hero-content
-        h1 Unbox your ideas. Sustainably.
+        h1 <b>Unbox</b> your ideas. Sustainably.
         |     
         h1.subheader
           | Innovation Challenge
-        h3.bold 1 December 2017
+        h3.sub 
+            span.bold December 
+            | 1, 2017
         h3 ECE Campus, Marconistraat 16
         a(target="_blank", href='https://ecestudents2017.typeform.com/to/nCDAKk') Sign Up
         |
@@ -21,8 +23,7 @@ app-main-menu
         h3 What is Innovation Challenge?
         p The Innovation Challenge is a two-way opportunity for creative-minded students and business organizations. The students, guided by experienced mentors, are able to liberate their imagination and solve business-related problems, while the companies benefit from the ideas of fresh-minded students. During the challenge, the participants will investigate a real-life case, form teams, brainstorm solutions and pitch their ideas to the judges. The best idea wins the award!
         span.blue December 1 | 8.30
-        span.blue Marconistraat 16
-        span.blue ECE Campus
+        span.blue ECE Campus, Marconistraat 16
 .panel-svm
     .title Stichting Verpakking en Milieu
     .left 
