--- a/src/app/pages/homepage/template.pug
+++ b/src/app/pages/homepage/template.pug
@@ -1,21 +1,28 @@
 //put the menu somewhere in the page
 //app-main-menu
+#construction
+    | Website under construction. Innovation under way.
 .shaping  
    
     .red
-      
-        a For You
+        button For You
+            div.icpop
+                div Job Portal
+                div Steep
+                div About Us
     .white 
         app-main-menu
         img(src='{{ logo | cd:"w_350,c_fill" }}')
         h1 Shaping Ideas
-        img(src='{{ bulb | cd:"w_200,c_fill" }}')
+        img(src='{{ bulb | cd:"w_130,c_fill" }}')
     .blue
         p 
         a(routerLink="/ic") Events
-        .icpop
-            img(src='{{ ic_logo | cd:"w_60,c_fill"}}')
-            | Innovation Challenge
+            div.icpop
+                div Next up:
+                img(src='{{ ic_logo | cd:"w_60,c_fill"}}')
+                div Innovation Challenge
+                div December 1, 2017
         
 #erasmus.container-fluid
     .left
