--- a/src/app/parts/main_menu/template.pug
+++ b/src/app/parts/main_menu/template.pug
@@ -2,5 +2,11 @@ ul.nav
     li.home
         a(routerLink="/") 
             img(src='{{ bulbicon | cd:"h_80,c_fill"}}')
-    li(*ngFor="let link of menu")
-        a(routerLink="/{{ link.path }}") {{link.label}}  
+    //li(*ngFor="let link of menu")
+        a(routerLink="/{{ link.path }}") {{link.label}}
+    li
+        a(routerLink="/ic") Innovation Challenge
+    li
+        a(href="http://jobportal.ecestudents.com") Job Portal    
+    li
+        a(href="http://events.ecestudents.com") Events
