--- a/src/app/pages/homepage/template.pug
+++ b/src/app/pages/homepage/template.pug
@@ -12,9 +12,9 @@
                 div About Us
     .white 
         app-main-menu
-        img(src='{{ logo | cd:"w_350,c_fill" }}')
+        img.logo(src='{{ logo | cd:"w_350,c_fill" }}')
         h1 Shaping Ideas
-        img(src='{{ bulb | cd:"w_130,c_fill" }}')
+        img.bulb(src='{{ bulb | cd:"w_130,c_fill" }}')
     .blue
         p 
         a(routerLink="/ic") Events
